Closed
Bug 225357
Opened 22 years ago
Closed 22 years ago
total crash on above URL
Categories
(SeaMonkey :: General, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: ddaniels, Unassigned)
References
()
Details
(Keywords: crash)
Attachments
(1 file, 1 obsolete file)
|
1.07 KB,
patch
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.6a) Gecko/20031029
Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.6a) Gecko/20031029
from the console
Document http://slashdot.org/ loaded successfully
Document http://www.mozilla.org/ loaded successfully
Document http://www.mozilla.org/feedback.html loaded successfully
Document http://bugzilla.mozilla.org/ loaded successfully
Document http://bugzilla.mozilla.org/enter_bug.cgi loaded successfully
Document http://bugzilla.mozilla.org/enter_bug.cgi?product=Browser loaded
successfully
Document about:plugins loaded successfully
Document
http://www.fabforce.net/dbdesigner4/media_showmovie.php?moviename=DBD4overview.swf
loaded successfully
Gdk-ERROR **: BadValue (integer parameter out of range for operation)
serial 75797 error_code 2 request_code 12 minor_code 0
Gdk-ERROR **: BadValue (integer parameter out of range for operation)
serial 75798 error_code 2 request_code 12 minor_code 0
plugin data:
MIME Type Description Suffixes Enabled
application/x-shockwave-flash Shockwave Flash swf Yes
application/futuresplash FutureSplash Player spl Yes
Reproducible: Always
Steps to Reproduce:
1.go to
http://www.fabforce.net/dbdesigner4/media_showmovie.php?moviename=DBD4overview.swf
2.
3.
Actual Results:
total crash of moz 1.6a
Expected Results:
played the .swf which it has on other pages
Updated•22 years ago
|
URL: http://www.fabforce.net/dbdesigner4/... → http://www.fabforce.net/dbdesigner4/m...
Severity: normal → critical
Keywords: crash
Comment 1•22 years ago
|
||
Is this a gtk2 build?
Boom ! Confirmed with 1.6a Linux i686 gcc-2.95.3 compiled, gtk1.2.0.9.1,
Shockwave plugin 6.0 r79
Comment 3•22 years ago
|
||
In a debug gtk1 build in gdb I get:
For application/x-shockwave-flash found plugin
/home/bzbarsky/plugins/libflashplayer.so
LoadPlugin() /home/bzbarsky/plugins/libflashplayer.so returned 42a39980
Gdk-ERROR **: BadValue (integer parameter out of range for operation)
serial 5652 error_code 2 request_code 12 minor_code 0
Gdk-ERROR **: BadValue (integer parameter out of range for operation)
serial 5653 error_code 2 request_code 12 minor_code 0
Program exited with code 01.
Sounds like more of that "gtk decides to call exit() for us" stuff....
blizzard, bryner, any idea what's up here?
| Reporter | ||
Comment 4•22 years ago
|
||
K12OSN group is reporting similar bug with moz and flash with sound. I don't
have sound configured on my linux box... related? I think so. I've played .swf
files without sound without problems.
hth
dgd
Comment 5•22 years ago
|
||
It's a reflow problem. The X error is just a symptom. Layout is trying to
create a window that's greater than the maximum possible height of a window in
X, and that causes the error.*
If you stick a breakpoint in nsObjectFrame::Reflow the aReflowState has bogus
information in it:
(gdb) print aReflowState.mComputedHeight
$89 = 251658224
(gdb) print aReflowState.mComputedWidth
$90 = 11535
Reflow is called a few times so you need to be patient. It seems to be the
Reflow called after the load is finished (which is easy to see in TestGtkEmbed.)
* bz, that's part of X, not Gtk.
The source for that page contains this:
<EMBED ... HEIGHT="16777215" ... >
So, what to do?
Comment 7•22 years ago
|
||
roc points out:
<rocWork> uh
<rocWork> HEIGHT="16777215"
<rocWork> in the source
so layout is only doing what we tell it to, I guess. We can just clamp the
values for now. We're never going to be able to create a plugin window that has
> 16 bit coordinates.
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Comment 8•22 years ago
|
||
Hmm... and of course IE renders the <object> and ignores the <embed>? What does
NS4 show? Does it just wrap the value?
In any case, I'd say the clamping should happen at window-creation time (since
it only needs to happen on X, if nothing else); there is no reason not to size
the <embed>'s layout object per the page's instructions.
Comment 9•22 years ago
|
||
This actually hacks nsObjectFrame to clamp the sizes on unix only. I thought
about doing this down at the widget level, but I thought it might actually be
better if the frame model and widgets actually agreed on sizes so things didn't
look odd (like, pages would just be cut off and not render.)
It also means that I only have to do it in one place instead of touching about
10 different places in the widget code for all the various toolkit impls as
well.
Comment 10•22 years ago
|
||
Comment on attachment 135335 [details] [diff] [review]
patch
Oh, if this gets checked in I'll put a comment about this bug into the comments
above the hack as well.
Updated•22 years ago
|
Attachment #135335 -
Flags: superreview?(roc)
Attachment #135335 -
Flags: review?(bz-vacation)
With this patch, <object>s don't obey their CSS min-height if the min-height is
set to something huge.
In the interests of keeping layout consistent with CSS, perhaps a better
approach would be to limit the height of <object>s to 16K pixels with a rule in
html.css:
object { max-height:16380px; }
Comment 12•22 years ago
|
||
Yeah, I sort of prefer roc's solution (with a !important on that declaration).
Comment 13•22 years ago
|
||
And "applet, object, embed" as the selector.
But if you use "!important", that doesn't let someone use CSS max-height to lay
out their EMBED. And if you specify a really big min-height, that overrides the
max-height.
On second thoughts, I'm preferring Chris's patch. I'll approve it.
Attachment #135335 -
Flags: superreview?(roc) → superreview+
Comment on attachment 135335 [details] [diff] [review]
patch
Hang on ... can't GTK2 handle 32-bit coordinates?
Comment 16•22 years ago
|
||
Comment on attachment 135335 [details] [diff] [review]
patch
Hmm, good point. r=me, with the gtk2 issue resolved.
Attachment #135335 -
Flags: review?(bz-vacation) → review+
Comment 17•22 years ago
|
||
Gtk2 can, but the underlying plugins, at least the Xt-based based ones, can't.
So we're screwed in this one regard.
Comment 18•22 years ago
|
||
Final patch that includes comments.
Attachment #135335 -
Attachment is obsolete: true
Updated•22 years ago
|
Attachment #135408 -
Flags: superreview?(roc)
Attachment #135408 -
Flags: review?(bz-vacation)
Updated•22 years ago
|
Attachment #135408 -
Flags: superreview?(roc)
Attachment #135408 -
Flags: superreview+
Attachment #135408 -
Flags: review?(bz-vacation)
Attachment #135408 -
Flags: review+
Updated•22 years ago
|
Attachment #135408 -
Flags: superreview+
Attachment #135408 -
Flags: review+
Comment 19•22 years ago
|
||
Checked in. Thanks, guys.
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Updated•21 years ago
|
Product: Browser → Seamonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•