Bug #225357.  Plugins that specify coordinates that exceed maximum X coordinates cause X errors.  Limit the size of plugins on this platform to the maximum size for X windows.  r=bz, sr=roc